# uskg

./: README.md  main.py  pyproject.toml
src/: __init__.py  client.py  config.py  menu.py
